# cminusminus_compiler_fr

./: .gitignore  .gitmodules  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  cmm  compile_commands.json  readme.md
.github/workflows/: cmake-multi-platform.yml
include/: nfa.h  symbol.h  token.h
include/ast/: ast.h  ast_builder.h
include/grammar/: grammar.h  parser.h  parser_ll.h  parser_slr.h  symbol.h
include/ir/: codegen_context.h  ir_generator.h
include/lexer/: dfa.h  lexer.h  nfa.h  regex.h  symbol.h
include/semantic/: symbol_table.h
include/utils/: dfa.h  nfa.h  timer.h  util.h
src/: main.cpp
src/ast/: ast.cpp  ast_builder.cpp  ast_codegen.cpp
src/grammar/: ast_builder.cpp  grammar.cpp  grammar_rules.cpp  parser.cpp  parser_ll.cpp  parser_slr.cpp
src/ir/: ir_generator.cpp
src/lexer/: dfa.cpp  lexer.cpp  nfa.cpp  regex.cpp
src/semantic/: symbol_table.cpp
src/utils/: dfa.cpp  nfa.cpp
tests/: CMakeLists.txt  compare_tokens.py  compare_trace.py
tests/data/: float.sy  lli_arith.sy
tests/grammar/: first-set.cpp  follow-set.cpp  follow_set.cpp  grammar-init.cpp  ll1-parser.cpp  ll1.cpp  ll1_init.cpp  lr.cpp  lr0.cpp  slr.cpp  slr_parse_test.cpp  slr_simple.cpp
tests/integration/: parser_cases.cpp
tests/lab4/: test1.ref  test1.sy  test2.ref  test2.sy  test3.ref  test3.sy
tests/lexer/: dfa-minimal.cpp  dfa.cpp  dfa_format_test.cpp  lexer_format_test.cpp  regex.cpp
